[workspace]
members = [
    "canhttp",
]
resolver = "2"

[workspace.package]
authors = ["DFINITY Foundation"]
edition = "2021"
repository = "https://github.com/dfinity/canhttp"
homepage = "https://github.com/dfinity/canhttp#readme"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
assert_matches = "1.5.0"
candid = { version = "0.10.13" }
canlog = { version = "0.1.1", features = ["derive"] }
candid_parser = { version = "0.1.4" }
ciborium = "0.2.2"
derive_more = { version = "2.0.1", features = ["from", "into"] }
ethnum = { version = "1.5.0", features = ["serde"] }
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
http = "1.3.1"
ic-canister-log = "0.2.0"
ic-cdk = "0.17.2"
ic-cdk-bindgen = "0.1"
ic-cdk-macros = "0.17.2"
ic-certified-map = "0.4"
ic-error-types = "0.2"
ic-management-canister-types = "0.3"
ic-metrics-encoder = "1.1"
ic-stable-structures = "0.6.8"
itertools = "0.14.0"
maplit = "1.0.2"
minicbor = { version = "1.0.0", features = ["alloc", "derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
pin-project = "1.1.10"
proptest = "1.6.0"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.17"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
tokio = "1.44.1"
tower = "0.5.2"
tower-layer = "0.3.3"
tower-http = "0.6.2"
thiserror = "2.0.12"
url = "2.5"
