[workspace]
members = [
    "canhttp",
    "examples/http_canister",
    "ic-canister-runtime",
    "ic-pocket-canister-runtime",
]
resolver = "2"

[workspace.package]
authors = ["DFINITY Foundation"]
edition = "2021"
repository = "https://github.com/dfinity/canhttp"
homepage = "https://github.com/dfinity/canhttp"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.88"
candid = { version = "0.10.13" }
canhttp = { path = "canhttp" }
ciborium = "0.2.2"
futures-channel = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
ic-agent = "0.44.3"
ic-canister-runtime = { path = "ic-canister-runtime" }
ic-cdk = "0.18.7"
ic-error-types = "0.2"
ic-management-canister-types = "0.3.3"
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2025-01-23_03-04-base" }
itertools = "0.14.0"
maplit = "1.0.2"
num-traits = "0.2.19"
once_cell = "1.21.3"
pin-project = "1.1.10"
pocket-ic = "9.0.2"
proptest = "1.6.0"
regex-lite = "0.1.8"
serde = "1.0"
serde_bytes = "0.11.19"
serde_json = "1.0"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.44.1"
tower = "0.5.2"
tower-layer = "0.3.3"
url = "2.5.7"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"
