[package]
name = "ic-canister-runtime"
version = "0.1.0"
description = "Rust library that abstracts the canister runtime on the Internet Computer"
license.workspace = true
readme.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
repository.workspace = true
documentation = "https://docs.rs/canruntime"

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-error-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
