[package]
name = "test_fixtures"
version = "1.0.0"
edition.workspace = true

[dependencies]
candid = { workspace = true }
ic-management-canister-types = "0.3.3"             # this version is required by pocket-ic v9
ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
