[package]
name = "test_fixtures"
version = "1.0.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-canister-runtime = { workspace = true, features = ["proxy"] }
ic-management-canister-types = { workspace = true }
ic-pocket-canister-runtime = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
reqwest = "0.12.28"
