[package]
name = "http_canister"
version = "1.0.0"
edition.workspace = true

[[bin]]
name = "http_canister"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
canhttp = { path = "../../canhttp", features = ["http"] }
http = { workspace = true }
ic-cdk = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
test_fixtures = { workspace = true }
