[package]
name = "multi_canister"
version = "1.0.0"
edition.workspace = true

[[bin]]
name = "multi_canister"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
canhttp = { path = "../../canhttp", features = ["http", "json", "multi"] }
http = { workspace = true }
ic-cdk = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
ic-management-canister-types = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
